--- a/Photo Search Example/Base.lproj/Main.storyboard
+++ b/Photo Search Example/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Photo_Search_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,8 +16,26 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sfc-O7-h6L">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="sfc-O7-h6L" secondAttribute="trailing" id="I26-C4-NGg"/>
+                            <constraint firstAttribute="bottom" secondItem="sfc-O7-h6L" secondAttribute="bottom" id="KM4-KE-g3s"/>
+                            <constraint firstItem="sfc-O7-h6L" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="MuD-Fx-CXp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="sfc-O7-h6L" secondAttribute="trailing" constant="-16" id="Nc2-dG-7Xz"/>
+                            <constraint firstItem="sfc-O7-h6L" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="ceA-O8-c9o"/>
+                            <constraint firstItem="sfc-O7-h6L" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="fZD-LS-gWe"/>
+                            <constraint firstItem="sfc-O7-h6L" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="k9E-Om-4s9"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="sfc-O7-h6L" secondAttribute="bottom" id="uCk-ah-JWC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="sfc-O7-h6L" id="aje-zr-RWe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
